cadvisor.daemonset.yaml
# ./cadvisor.daemonset.yaml

# https://github.com/google/cadvisor/tree/master/deploy/kubernetes

#  --volume=/:/rootfs:ro \
#  --volume=/var/run:/var/run:ro \
#  --volume=/sys:/sys:ro \
#  --volume=/var/lib/docker/:/var/lib/docker:ro \
#  --volume=/dev/disk/:/dev/disk:ro \

# https://github.com/google/cadvisor/blob/master/deploy/kubernetes/base/daemonset.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: kube-system
  name: kube-daemon-cadvisor
spec:
  selector:
    matchLabels:
      feature: "monitoring"
  template:
    metadata:
      labels:
        feature: "monitoring"
    spec:
      containers:
      - name: "cadvisor"
        image: "cadvisor:latest"
        ports:
          - containerPort: 8080
        restartPolicy: Always
#        resources:
#          requests:
#            memory: 400Mi
#            cpu: 400m
#          limits:
#            memory: 2000Mi
#            cpu: 800m
        volumeMounts:
        - name: rootfs
          mountPath: /rootfs
          readOnly: true
        - name: var-run
          mountPath: /var/run
          readOnly: true
        - name: sys
          mountPath: /sys
          readOnly: true
        - name: docker
          mountPath: /var/lib/docker
          readOnly: true
        - name: disk
          mountPath: /dev/disk
          readOnly: true
#      automountServiceAccountToken: false
#      terminationGracePeriodSeconds: 30
#      volumes:
#      - name: rootfs
#        hostPath:
#          path: /
#      - name: var-run
#        hostPath:
#          path: /var/run
#      - name: sys
#        hostPath:
#          path: /sys
#      - name: docker
#        hostPath:
#          path: /var/lib/docker
#      - name: disk
#        hostPath:
#          path: /dev/disk
