poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: kube-deploy-poll
  labels:
      services: "poll"
spec:
  replicas: 2
  selector:
    matchLabels:
      services: "poll"
  template:
    metadata:
      labels:
        services: "poll"
    spec:
      containers:
      - name: "t-dop-600-poll-1"
        image: "epitechcontent/t-dop-600-poll:k8s"
        resources:
          limits:
            memory: 128M
        ports:
          - containerPort: 80
  restartPolicy: Always
