postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: kube-deploy-postgres
  labels:
    feature: "databases"
spec:
  selector:
    matchLabels:
      feature: "databases"
  template:
    metadata:
      labels:
        feature: "databases"
    spec:
      volumes:
      - name: postgresql-volume
        hostPath:
          path: /var/lib/postgresql/data
      restartPolicy: Always
      containers:
      - name: "postgres-1"
        image: "postgres:12"
        ports:
          - containerPort: 5432
