result.deployment.yaml
# ./result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: kube-deploy-result
  labels:
    services: "result"
spec:
  replicas: 2
  selector:
    matchLabels:
      services: "result"
  template:
    metadata:
      labels:
        services: "result"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: services
                    operator: In
                    values:
                      - result
              topologyKey: kubernetes.io/hostname
      restartPolicy: Always
      containers:
      - name: "t-dop-600-result-1"
        image: "epitechcontent/t-dop-600-result:k8s"
        resources:
          limits:
            memory: 128M
        ports:
          - containerPort: 80
