worker.deployment.yaml
# ./worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: kube-deploy-worker
  labels:
    services: "worker"
spec:
  selector:
    matchLabels:
      services: "worker"
  template:
    metadata:
      labels:
        services: "worker"
    spec:
      restartPolicy: Always
      containers:
      - name: "t-dop-600-worker-1"
        image: "epitechcontent/t-dop-600-worker:k8s"
        resources:
          limits:
            memory: 256M
