traefik.service.yaml
# ./traefik.service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  namespace: default
  name: kube-service-traefik
