poll.ingress.yaml
# ./poll.ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  namespace: default
  name: kube-ingress-poll
